Bug#39695 "Crash in SRLUpdateRecords::thaw during falcon_chill_thaw_test"

Fixed compile warning.